--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2978,7 +2978,6 @@
 			flex-direction: row;
 			background-color: #2e3450;
 			min-height: 400px;
-			max-height: 429.33px;
 
 			margin-bottom: 25px;
 		}
@@ -3058,6 +3057,9 @@
 				}
 
 		@media screen and (max-width: 1680px) {
+			.spotlights section {
+				max-height: 429.33px;
+			}
 
 			.spotlights > section > .image {
 				width: 40%;
