--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3454,14 +3454,15 @@
 	}
 
 		#banner:after {
-			-moz-transition: opacity 2.5s ease;
+			/* -moz-transition: opacity 2.5s ease;
 			-webkit-transition: opacity 2.5s ease;
 			-ms-transition: opacity 2.5s ease;
 			transition: opacity 2.5s ease;
 			-moz-transition-delay: 0.75s;
 			-webkit-transition-delay: 0.75s;
 			-ms-transition-delay: 0.75s;
-			transition-delay: 0.75s;
+			transition-delay: 0.75s; */
+
 			-moz-pointer-events: none;
 			-webkit-pointer-events: none;
 			-ms-pointer-events: none;
